--- a/D5_lgbm5_aggregated_features_lightgbm.ipynb
+++ b/D5_lgbm5_aggregated_features_lightgbm.ipynb
@@ -35,7 +35,8 @@
         "## Impressions and Reviews  \r\n",
         "- avg_times_up_user, avg_days_up_user, n_user_items 를 생성하여 좋은 성능\r\n",
         "- item의 description과 title에 대해 tfidf, countvect를 사용하여 추가 feature 사용\r\n",
-        "- matplotlib 의 venndiagram을 사용"
+        "- matplotlib 의 venndiagram을 사용",
+        "- lgb.Dataset(use_missing이나 zero_as_missing)을 써서 겹치지 않았던 data도 학습을 해보면 어땠을까"
       ]
     },
     {
