--- a/D4_Lasso1_xgboost_lasso.ipynb
+++ b/D4_Lasso1_xgboost_lasso.ipynb
@@ -28,7 +28,7 @@
         "- EDA를 통한 다양한 변수 binning(binary, mapping) 시도\r\n",
         "- skew threshold 기준으로 일부 연속형 변수 log1p 적용\r\n",
         "- 전체적으로 연속형변수에 standard scaler 적용\r\n",
-        "categorical 변수를 다시 binning하여 rescale 시도"
+        "- categorical 변수를 다시 binning하여 rescale 시도"
       ]
     },
     {
